fixed several bugs

--- a/usr/share/oma-welcome/apps-gaming.sh.htm
+++ b/usr/share/oma-welcome/apps-gaming.sh.htm
@@ -46,37 +46,41 @@ cat << EOF
 		    <ul>
 			 <li><a href='apps-office.sh.htm'><span>$menuappsoffice</span></a></li> 
 			 <li><a href='apps-graphics.sh.htm'><span>$menuappsgraphics</span></a></li>
-			 <li class='active'><a href='apps-multimedia.sh.htm'><span>$menuappsmultimedia</span></a></li>
+			 <li><a href='apps-multimedia.sh.htm'><span>$menuappsmultimedia</span></a></li>
 			 <li><a href='apps-utility.sh.htm'><span>$menuappsutility</span></a></li>
-			 <li><a href='apps-gaming.sh.htm'><span>$menuappsgaming</span></a></li>
+			 <li class='active'><a href='apps-gaming.sh.htm'><span>$menuappsgaming</span></a></li>
 		    </ul>
-		<br/>    
+		    <br/>
 		</div>
 		<ul id="item-list">
 			<li>
-				<a href=./apps/install-codecs.run><img src="images/codec.png" /></a>
-				<p><span><a class="title" href=./apps/install-codecs.run>$titlecodecs</br></a></span>$desccodecs</br></br></p>
+				<a class="title" href=./apps/install-steam.run><img src="images/steam.png" /></a>
+				<p><span><a class="title" href=./apps/install-steam.run>$titlesteam</a></span><br/></span></br>$descsteam</p>
 			</li>
 			<li>
-				<a class="title" href=./apps/install-audacity.run><img src="/usr/share/icons/rosa/apps/72/audacity.svg" />
-				<p><span><a class="title" href=./apps/install-audacity.run>$titleaudacity</br></a></span>$descaudacity</p>
+				<a href=./apps/install-0ad.run><img src="images/0ad.png" /></a>
+				<p><span><a class="title" href=./apps/install-0ad.run>$title0ad </a></span><br/>
+				$desc0ad.</p>
 			</li>
 			<li>
-				<a class="title" href=./apps/install-kdenlive.run><img src="/usr/share/icons/rosa/apps/128/kdenlive.svg" /></a>
-				<p><span><a class="title" href=./apps/install-kdenlive.run>$titlekdenlive</br></a></span>$desckdenlive</span></p>
-			</li>
-			
-			<li>
-				<a class="title" href=./apps/install-devede.run><img src="images/devede.png" /></a>
-				<p><span><a class="title" href="./apps/install-devede.run">$titledevede</br></a></span>$descdevede</br></br></br></br></br></br></p>
+				<a href=./apps/install-othersgames.run><img src="images/Chwido200.png" /></a>
+				<p><span><a class="title" href=./apps/install-gnucash.run>$titlegames </a></span><br/>
+				$descgames.</p>
 			</li>
 			<li>
-				<a class="title" href=./apps/install-xvidcap.run><img src="images/xvidcap.png" />
-				<p><span><a class="title" href=./apps/install-xvidcap.run>$titlexvidcap</br></a></span>$descxvidcap</br></br></br></p>
+				<a href=./apps/install-othersgames.run><img src="images/Chwido200.png" /></a>
+				<p><span><a class="title" href=./apps/install-gnucash.run>$titlegames </a></span><br/>
+				$descgames.</p>
 			</li>
 			<li>
-				<a class="title" href="./apps/abrir-rpmdrake.run"><img src="images/rpmdrake.png" />
-				<p><span><a class="title" href="./apps/abrir-rpmdrake.run">$titlerpmdrake</br></a></span>$descrpmdrake</p>
+				<a href=./apps/install-othersgames.run><img src="images/Chwido200.png" /></a>
+				<p><span><a class="title" href=./apps/install-gnucash.run>$titlegames </a></span><br/>
+				$descgames.</p>
+			</li>
+			<li>
+				<a href=./apps/install-othersgames.run><img src="images/Chwido200.png" /></a>
+				<p><span><a class="title" href=./apps/install-gnucash.run>$titlegames </a></span><br/>
+				$descgames.</p>
 			</li>
 		</ul>
 	</div> 
