--- a/usr/share/oma-welcome/apps-graphics.sh.htm
+++ b/usr/share/oma-welcome/apps-graphics.sh.htm
@@ -31,7 +31,7 @@ cat << EOF
 			<li><a href="index.sh.htm">$menuindex</a></li>
 			<li><a href="news.sh.htm">$menunews</a></li>
 			<li><a href="conf.sh.htm">$menuconfigure</a></li>
-			<li><a href="apps.sh.htm">$menuapps</a></li>
+			<li><a href="apps-office.sh.htm">$menuapps</a></li>
 			<li><a href="community.sh.htm">$menucontribute</a></li>
 			<li><a href="about.sh.htm">$menuabout</a></li>
 		</ul>
@@ -44,26 +44,26 @@ cat << EOF
 		<br/>
 		<div id='cssmenu'>
 		    <ul>
-			 <li><a href='apps.sh.htm'><span>$menuappsconfig</span></a></li>
+			 <li><a href='apps-office.sh.htm'><span>$menuappsoffice</span></a></li> 
 			 <li class='active'><a href='apps-graphics.sh.htm'><span>$menuappsgraphics</span></a></li>
 			 <li><a href='apps-multimedia.sh.htm'><span>$menuappsmultimedia</span></a></li>
-			 <li><a href='apps-utilitarios.sh.htm'><span>$menuappsutility</span></a></li>
-			 <li><a href='apps-office.sh.htm'><span>$menuappsoffice</span></a></li>
+			 <li><a href='apps-utility.sh.htm'><span>$menuappsutility</span></a></li>
+			 <li><a href='apps-gaming.sh.htm'><span>$menuappsgaming</span></a></li>
 		    </ul>
 		    <br/>
 		</div>
 		<ul id="item-list">
 			<li>
 				<a href=./apps/install-gimp.run> <img src="/usr/share/icons/rosa/apps/64/gimp.svg" />
-				<p><span><a class="title" href=./apps/install-gimp.run>$titlegimg</a></span><br/>$descgimp <br/></p>
+				<p><span><a class="title" href=./apps/install-gimp.run>$titlegimg</a></span><br/>$descgimp </br></br><br/></br></br></p>
 			</li>
 			<li>
 				<a href=./apps/install-inkscape.run><img src="/usr/share/icons/oxygen/128x128/apps/inkscape.png" /></a>
-				<p><span><a class="title" href=./apps/install-inkscape.run>$titleinkscape </a></span><br/>$descinkscape</p>
+				<p><span><a class="title" href=./apps/install-inkscape.run>$titleinkscape </a></span><br/>$descinkscape.</br></br></br></p>
 			</li>
 			<li>
 				<a href=./apps/install-blender.run><img src="images/blender.png" />
-				<p><span><a class="title" href=./apps/install-blender.run>$titleblender</a></span><br/>$descblender<br/><br/></p>
+				<p><span><a class="title" href=./apps/install-blender.run>$titleblender</a></span><br/>$descblender<br/></p>
 			</li>
 			<li>
 				<a class="title" href=./apps/install-scribus.run><img src="/usr/share/icons/oxygen/64x64/apps/scribus.png" /></a>
@@ -72,12 +72,12 @@ cat << EOF
 			
 			<li>
 				<a class="title" href="./apps/install-tuxpaint.run"><img src="images/tux_paint.png" />
-				<p><span><a class="title" href="./apps/install-tuxpaint.run">$titletuxpaint </a></span><br/>$desctuxpaint</p>
+				<p><span><a class="title" href="./apps/install-tuxpaint.run">$titletuxpaint </a></span><br/>$desctuxpaint.</br></br></p>
 			</li>
 						
 			<li>
 				<a class="title" href="./apps/abrir-rpmdrake.run"><img src="images/rpmdrake.png" />
-				<p><span><a class="title" href="./apps/abrir-rpmdrake.run">$titlerpmdrake</a></span><br/>$descrpmdrake<br/><br/><br/></p>
+				<p><span><a class="title" href="./apps/abrir-rpmdrake.run">$titlerpmdrake</a></span><br/>$descrpmdrake.</p>
 			</li>
 		</ul>
 	</div> 
