--- a/usr/share/oma-welcome/apps-utility.sh.htm
+++ b/usr/share/oma-welcome/apps-utility.sh.htm
@@ -46,37 +46,37 @@ cat << EOF
 		    <ul>
 			 <li><a href='apps-office.sh.htm'><span>$menuappsoffice</span></a></li> 
 			 <li><a href='apps-graphics.sh.htm'><span>$menuappsgraphics</span></a></li>
-			 <li class='active'><a href='apps-multimedia.sh.htm'><span>$menuappsmultimedia</span></a></li>
-			 <li><a href='apps-utility.sh.htm'><span>$menuappsutility</span></a></li>
+			 <li><a href='apps-multimedia.sh.htm'><span>$menuappsmultimedia</span></a></li>
+			 <li class='active'><a href='apps-utility.sh.htm'><span>$menuappsutility</span></a></li>
 			 <li><a href='apps-gaming.sh.htm'><span>$menuappsgaming</span></a></li>
 		    </ul>
-		<br/>    
+		    <br/>
 		</div>
 		<ul id="item-list">
 			<li>
-				<a href=./apps/install-codecs.run><img src="images/codec.png" /></a>
-				<p><span><a class="title" href=./apps/install-codecs.run>$titlecodecs</br></a></span>$desccodecs</br></br></p>
+				<a class="title" href=./apps/install-java.run><img src="images/java.png" />
+				<p><span><a class="title" href=./apps/install-java.run>$titleopenjdk</a></span><br/>$descopenjdk</br></br></p>
 			</li>
 			<li>
-				<a class="title" href=./apps/install-audacity.run><img src="/usr/share/icons/rosa/apps/72/audacity.svg" />
-				<p><span><a class="title" href=./apps/install-audacity.run>$titleaudacity</br></a></span>$descaudacity</p>
-			</li>
-			<li>
-				<a class="title" href=./apps/install-kdenlive.run><img src="/usr/share/icons/rosa/apps/128/kdenlive.svg" /></a>
-				<p><span><a class="title" href=./apps/install-kdenlive.run>$titlekdenlive</br></a></span>$desckdenlive</span></p>
+				<a class="title" href=./apps/install-adobe-flash.run><img src="images/flash.png" />
+				<p><span><a class="title" href=./apps/install-adobe-flash.run>$titleflash</br></a></span>$descflash</br></br></p>
 			</li>
 			
 			<li>
-				<a class="title" href=./apps/install-devede.run><img src="images/devede.png" /></a>
-				<p><span><a class="title" href="./apps/install-devede.run">$titledevede</br></a></span>$descdevede</br></br></br></br></br></br></p>
+				<a class="title" href="./apps/install-unrar.run"><img src="images/unrar.png" />
+				<p><span><a class="title" href="./apps/install-unrar.run">$titleunrar </a></span><br/>$descunrar</p>
 			</li>
 			<li>
-				<a class="title" href=./apps/install-xvidcap.run><img src="images/xvidcap.png" />
-				<p><span><a class="title" href=./apps/install-xvidcap.run>$titlexvidcap</br></a></span>$descxvidcap</br></br></br></p>
+				<a class="title" href=./apps/install-wine.run><img src="/usr/share/icons/oxygen/128x128/apps/wine.png" />
+				<p><span><a class="title" href=./apps/install-wine.run>$titlewine</a></span><br/>$descwine</br></br></br></br></br></br></br></p>
 			</li>
+			<li>
+				<a class="title" href=./apps/install-skype.run><img src="images/skype.png" />
+				<p><span><a class="title" href=./apps/install-skype.run>$titleskype</a></span><br/>$descskype</br></br></p>
+			</li>	
 			<li>
 				<a class="title" href="./apps/abrir-rpmdrake.run"><img src="images/rpmdrake.png" />
-				<p><span><a class="title" href="./apps/abrir-rpmdrake.run">$titlerpmdrake</br></a></span>$descrpmdrake</p>
+				<p><span><a class="title" href="./apps/abrir-rpmdrake.run">$titlerpmdrake</a></span><br/><br/>$descrpmdrake<br/><br/></p>
 			</li>
 		</ul>
 	</div> 
