--- a/usr/share/oma-welcome/community.sh.htm
+++ b/usr/share/oma-welcome/community.sh.htm
@@ -29,7 +29,7 @@ cat << EOF
 			<li><a href="index.sh.htm">$menuindex</a></li>
 			<li><a href="news.sh.htm">$menunews</a></li>
 			<li><a href="conf.sh.htm">$menuconfigure</a></li>
-			<li><a href="apps.sh.htm">$menuapps</a></li>
+			<li><a href="apps-office.sh.htm">$menuapps</a></li>
 			<li><a href="community.sh.htm">$menucontribute</a></li>
 			<li><a href="about.sh.htm">$menuabout</a></li>
 		</ul>
@@ -40,56 +40,63 @@ cat << EOF
 				<p class="titlePage"> $desccommunity </p>
 				<ul id="item-list">
 					<li>
-						<a href=./apps/open-wiki-cooker.run><img src="images/knewsticker.png" /></a>
-						<p><span><a class="title" href=./apps/open-forum.run>$titleforum </a></span><br/>
-						$descforum<br/></p>
+						<a href=./apps/open-forum.run><img src="images/knewsticker.png" /></a>
+						<p><span><a class="title" href=./apps/open-forum.run>$titleforum </a></span>
+						$descforum</p>
 					</li>
 					<li>
-						<a href=./apps/open-wiki-cooker.run><img src="images/preferences-desktop-locale.png" /></a>
-						<p><span><a class="title" href=./apps/open-wiki-translation.run>$titletranslation </a></span><br/>
-						$desctranslation<br/></p>
+						<a href=./apps/open-wiki-translation.run><img src="images/preferences-desktop-locale.png" /></a>
+						<p><span><a class="title" href=./apps/open-wiki-translation.run>$titletranslation </a></span>
+						$desctranslation</p>
 					</li>
 					<li>
 						<a href=./apps/open-wiki-cooker.run><img src="images/oma-logo.png" /></a>
-						<p><span><a class="title" href=./apps/open-wiki-cooker.run>$titlecooker </a></span><br/>
-						$desccooker<br/></p>
+						<p><span><a class="title" href=./apps/open-wiki-cooker.run>$titlecooker </a></span>
+						$desccooker</p>
 					</li>
 					<li>
-						<a href=./apps/open-wiki-cooker.run><img src="images/preferences-desktop-color.png" /></a>
-						<p><span><a class="title" href=./apps/open-wiki-artwork.run>$titleartwork </a></span><br/>
-						$descartwork<br/></p>
+						<a href=./apps/open-wiki-artwork.run><img src="images/preferences-desktop-color.png" /></a>
+						<p><span><a class="title" href=./apps/open-wiki-artwork.run>$titleartwork </a></span>
+						$descartwork</p>
 					</li>
 					<li>
-						<a href=./apps/open-wiki-cooker.run><img src="images/internet-mail.png" /></a>
-						<p><span><a class="title" href=./apps/open-mainlisting.run>$titlemainlisting </a></span><br/>
-						$descmainlisting<br/></p>
+						<a href=./apps/open-mainlisting.run><img src="images/internet-mail.png" /></a>
+						<p><span><a class="title" href=./apps/open-mainlisting.run>$titlemainlisting </a></span>
+						$descmainlisting</p>
 					</li>
 					<li>
-						<a href=./apps/open-wiki-cooker.run><img src="images/kbugbuster.png" /></a>
-						<p><span><a class="title" href=./apps/open-bugzilla.run>$titleqa </a></span><br/>
-						$descqa<br/></p>
+						<a href=./apps/open-bugzilla.run><img src="images/kbugbuster.png" /></a>
+						<p><span><a class="title" href=./apps/open-bugzilla.run>$titleqa </a></span>
+						$descqa</p>
 					</li>
 					<li>
-						<a href=./apps/open-wiki-cooker.run><img src="images/konversation.png" /></a>
-						<p><span><a class="title" href=./apps/open-konversation.run>$titleirc </a></span><br/>
-						$descirc<br/></p>
+						<a href=./apps/open-konversation.run><img src="images/konversation.png" /></a>
+						<p><span><a class="title" href=./apps/open-konversation.run>$titleirc </a></span>
+						$descirc</p>
 					</li>
 					<li>
-						<a href=./apps/open-wiki-cooker.run><img src="images/Chwido200.png" /></a>
-						<p><span><a class="title" href=./apps/open-donation.run>$titledonation </a></span><br/>
-						$descdonation<br/></p>
+						<a href=./apps/open-donation.run><img src="images/Chwido200.png" /></a>
+						<p><span><a class="title" href=./apps/open-donation.run>$titledonation </a></span>
+						$descdonation</p>
 					</li>
 					
 					
 				</ul>
 		</div> 
 	</div> 	
-		
+	<script type="text/javascript">
+// From: http://www.webdeveloper.com/forum/showthread.php?t=242793
+
+function OpenWindow(info) {
+  window.open(info,'WinName','height=400,width=600,resizable=yes,scrollbars=yes');
+}
+</script>	
 		
 		<div class="nostartauto">
 		<span>
-		<form action="nostart.run" method="post">
-		<input id="check" type="checkbox" name="start" value="yes">$nostarwithoma </spam>
+<!-- 		<form action="" method="post"> -->
+		 <input type="checkbox" value="./apps/nostart.run" name="checket" onClick="if (this.checked) { window.location = this.value; }"/>
+		 $nostarwithoma </spam>
 		<div>
 		<div id="rodape">
 		<a href="execute close$" class="button">$endapp</a>
