--- a/usr/share/oma-welcome/conf.sh.htm
+++ b/usr/share/oma-welcome/conf.sh.htm
@@ -31,7 +31,7 @@ cat << EOF
 			<li><a href="index.sh.htm">$menuindex</a></li>
 			<li><a href="news.sh.htm">$menunews</a></li>
 			<li><a href="conf.sh.htm">$menuconfigure</a></li>
-			<li><a href="apps.sh.htm">$menuapps</a></li>
+			<li><a href="apps-office.sh.htm">$menuapps</a></li>
 			<li><a href="community.sh.htm">$menucontribute</a></li>
 			<li><a href="about.sh.htm">$menuabout</a></li>
 		</ul>
@@ -45,7 +45,7 @@ cat << EOF
 		<br/>
 		<ul id="item-list">
 			<li>
-				<a class="title" href=./apps/abrir-drakconnect.run><img src="/usr/share/icons/networking_configuration_section.png" /></a>
+				<a href=./apps/abrir-drakconnect.run><img src="/usr/share/icons/networking_configuration_section.png" /></a>
 				<p><span><a class="title" href="./apps/abrir-drakconnect.run">$titleconfiglan </a></span><br/> $descconfiglan </p>
 			</li>
 			<li>
@@ -64,9 +64,9 @@ cat << EOF
 				$descxfdrake<br/> <br/><br/></span></p>
 			</li>
 			<li>
-				<a class="title" href=./apps/abrir-drakboot.run><img src="/usr/share/icons/boot_init_section.png" /></a>
-				<p><span><a class="title" href=./apps/abrir-drakboot.run>$titleconfigboot</a></span><br/>
-				$descconfigboot</p>
+				<a class="title" href=./apps/abrir-drakprint.run><img src="/usr/share/icons/large/printing_section.png" /></a>
+				<p><span><a class="title" href=./apps/abrir-drakprint.run>$titleconfigprint</a></span><br/>
+				$descconfigprint</p>
 			</li>
 			<li>
 				<a class="title" href=./apps/abrir-drakconf.run><img src="/usr/share/icons/drakconf.png" /></a>
