--- a/usr/share/oma-welcome/apps-office.sh.htm
+++ b/usr/share/oma-welcome/apps-office.sh.htm
@@ -31,7 +31,7 @@ cat << EOF
 			<li><a href="index.sh.htm">$menuindex</a></li>
 			<li><a href="news.sh.htm">$menunews</a></li>
 			<li><a href="conf.sh.htm">$menuconfigure</a></li>
-			<li><a href="apps.sh.htm">$menuapps</a></li>
+			<li><a href="apps-office.sh.htm">$menuapps</a></li>
 			<li><a href="community.sh.htm">$menucontribute</a></li>
 			<li><a href="about.sh.htm">$menuabout</a></li>
 		</ul>
@@ -44,24 +44,24 @@ cat << EOF
 		<br/>
 		<div id='cssmenu'>
 		    <ul>
-			 <li><a href='apps.sh.htm'><span>$menuappsconfig</span></a></li>
+			 <li class='active'><a href='apps-office.sh.htm'><span>$menuappsoffice</span></a></li> 
 			 <li><a href='apps-graphics.sh.htm'><span>$menuappsgraphics</span></a></li>
 			 <li><a href='apps-multimedia.sh.htm'><span>$menuappsmultimedia</span></a></li>
-			 <li><a href='apps-utilitarios.sh.htm'><span>$menuappsutility</span></a></li>
-			 <li class='active'><a href='apps-office.sh.htm'><span>$menuappsoffice</span></a></li>
+			 <li><a href='apps-utility.sh.htm'><span>$menuappsutility</span></a></li>
+			 <li><a href='apps-gaming.sh.htm'><span>$menuappsgaming</span></a></li>
 		    </ul>
 		    <br/>
 		</div>
 		<ul id="item-list">
 			<li>
 				<a href=./apps/install-calibre.run><img src="images/calibre.png" /></a>
-				<p><span><a class="title" href=./apps/install-codecs.run>Calibre </a></span><br/>
-				You can convert and manage your e-Book with Calibre.</p>
+				<p><span><a class="title" href=./apps/install-calibre.run>$titlecalibre </a></span><br/>
+				$desccalibre</p>
 			</li>
 			<li>
 				<a href=./apps/install-dia.run><img src="images/dia.png" /></a>
 				<p><span><a class="title" href=./apps/install-dia.run>Dia </a></span><br/>
-				Easy to create Diagram documents with Dia.</p>
+				Easy to create Diagram documents with Dia.</br></br></p>
 			</li>
 			<li>
 				<a href=./apps/install-gnucash.run><img src="images/gnucash.png" /></a>
@@ -76,12 +76,12 @@ cat << EOF
 			<li>
 				<a href=./apps/install-semantik.run><img src="images/semantik.png" /></a>
 				<p><span><a class="title" href=./apps/install-semantik.run>Semantik </a></span><br/>
-				Mindmapping and brainstorming tools.</p>
+				Mindmapping and brainstorming tools.</br></br></p>
 			</li>
 			<li>
 				<a href=./apps/install-kraft.run><img src="images/kraft.png" /></a>
 				<p><span><a class="title" href=./apps/install-kraft.run>Kraft </a></span><br/>
-				Manages your Office Documents with Kraft</p>
+				Manages your Office Documents with Kraft.</br></br></p>
 			</li>
 		</ul>
 	</div> 
