--- a/usr/share/oma-welcome/apps-multimedia.sh.htm
+++ b/usr/share/oma-welcome/apps-multimedia.sh.htm
@@ -54,29 +54,29 @@ cat << EOF
 		</div>
 		<ul id="item-list">
 			<li>
-				<a href=./apps/install-codecs.run><img src="images/codec.png" /></a>
-				<p><span><a class="title" href=./apps/install-codecs.run>$titlecodecs</br></a></span>$desccodecs</br></br></p>
+				<p><a href=./apps/install-codecs.run><img src="images/codec.png" class="alignleft" />
+				<span><a class="title" href=./apps/install-codecs.run>$titlecodecs</br></a></span>$desccodecs</p>
 			</li>
 			<li>
-				<a class="title" href=./apps/install-audacity.run><img src="/usr/share/icons/rosa/apps/72/audacity.svg" />
-				<p><span><a class="title" href=./apps/install-audacity.run>$titleaudacity</br></a></span>$descaudacity</p>
+				<a class="title" href=./apps/install-audacity.run><img src="/usr/share/icons/rosa/apps/72/audacity.svg" class="alignleft"/>
+				<span><a class="title" href=./apps/install-audacity.run>$titleaudacity</br></a></span>$descaudacity</p>
 			</li>
 			<li>
-				<a class="title" href=./apps/install-kdenlive.run><img src="/usr/share/icons/rosa/apps/128/kdenlive.svg" /></a>
-				<p><span><a class="title" href=./apps/install-kdenlive.run>$titlekdenlive</br></a></span>$desckdenlive</span></p>
+				<a class="title" href=./apps/install-kdenlive.run><img src="/usr/share/icons/rosa/apps/128/kdenlive.svg" class="alignleft"/>
+				<span><a class="title" href=./apps/install-kdenlive.run>$titlekdenlive</br></a></span>$desckdenlive</span></p>
 			</li>
 			
 			<li>
-				<a class="title" href=./apps/install-devede.run><img src="images/devede.png" /></a>
-				<p><span><a class="title" href="./apps/install-devede.run">$titledevede</br></a></span>$descdevede</br></br></br></br></br></br></p>
+				<a class="title" href=./apps/install-devede.run><img src="images/devede.png" class="alignleft"/>
+				<span><a class="title" href="./apps/install-devede.run">$titledevede</br></a></span>$descdevede</p>
 			</li>
 			<li>
-				<a class="title" href=./apps/install-xvidcap.run><img src="images/xvidcap.png" />
-				<p><span><a class="title" href=./apps/install-xvidcap.run>$titlexvidcap</br></a></span>$descxvidcap</br></br></br></p>
+				<a class="title" href=./apps/install-xvidcap.run><img src="images/xvidcap.png" class="alignleft"/>
+				<span><a class="title" href=./apps/install-xvidcap.run>$titlexvidcap</br></a></span>$descxvidcap</br></p>
 			</li>
 			<li>
-				<a class="title" href="./apps/abrir-rpmdrake.run"><img src="images/rpmdrake.png" />
-				<p><span><a class="title" href="./apps/abrir-rpmdrake.run">$titlerpmdrake</br></a></span>$descrpmdrake</p>
+				<a class="title" href="./apps/abrir-rpmdrake.run"><img src="images/rpmdrake.png" class="alignleft"/>
+				<span><a class="title" href="./apps/abrir-rpmdrake.run">$titlerpmdrake</br></a></span>$descrpmdrake</p>
 			</li>
 		</ul>
 	</div> 
