--- a/usr/share/oma-welcome/community.sh.htm
+++ b/usr/share/oma-welcome/community.sh.htm
@@ -40,43 +40,43 @@ cat << EOF
 				<p class="titlePage"> $desccommunity </p>
 				<ul id="item-list">
 					<li>
-						<a href=./apps/open-forum.run><img src="images/knewsticker.png" /></a>
-						<p><span><a class="title" href=./apps/open-forum.run>$titleforum </a></span>
-						$descforum</p>
+						<a href=./apps/open-forum.run><img src="images/knewsticker.png" class="alignleft"/></a>
+						<span><a class="title" href=./apps/open-forum.run>$titleforum<br/> </a></span>
+						$descforum<br/></p>
 					</li>
 					<li>
-						<a href=./apps/open-wiki-translation.run><img src="images/preferences-desktop-locale.png" /></a>
-						<p><span><a class="title" href=./apps/open-wiki-translation.run>$titletranslation </a></span>
+						<a href=./apps/open-wiki-translation.run><img src="images/preferences-desktop-locale.png" class="alignleft"/></a>
+						<span><a class="title" href=./apps/open-wiki-translation.run>$titletranslation <br/></a></span>
 						$desctranslation</p>
 					</li>
 					<li>
-						<a href=./apps/open-wiki-cooker.run><img src="images/oma-logo.png" /></a>
-						<p><span><a class="title" href=./apps/open-wiki-cooker.run>$titlecooker </a></span>
+						<a href=./apps/open-wiki-cooker.run><img src="images/oma-logo.png" class="alignleft"/></a>
+						<span><a class="title" href=./apps/open-wiki-cooker.run>$titlecooker<br/> </a></span>
 						$desccooker</p>
 					</li>
 					<li>
-						<a href=./apps/open-wiki-artwork.run><img src="images/preferences-desktop-color.png" /></a>
-						<p><span><a class="title" href=./apps/open-wiki-artwork.run>$titleartwork </a></span>
+						<a href=./apps/open-wiki-artwork.run><img src="images/preferences-desktop-color.png" class="alignleft"/></a>
+						<span><a class="title" href=./apps/open-wiki-artwork.run>$titleartwork<br/> </a></span>
 						$descartwork</p>
 					</li>
 					<li>
-						<a href=./apps/open-mainlisting.run><img src="images/internet-mail.png" /></a>
-						<p><span><a class="title" href=./apps/open-mainlisting.run>$titlemainlisting </a></span>
+						<a href=./apps/open-mainlisting.run><img src="images/internet-mail.png" class="alignleft"/></a>
+						<span><a class="title" href=./apps/open-mainlisting.run>$titlemainlisting<br/> </a></span>
 						$descmainlisting</p>
 					</li>
 					<li>
-						<a href=./apps/open-bugzilla.run><img src="images/kbugbuster.png" /></a>
-						<p><span><a class="title" href=./apps/open-bugzilla.run>$titleqa </a></span>
+						<a href=./apps/open-bugzilla.run><img src="images/kbugbuster.png" class="alignleft"/></a>
+						<span><a class="title" href=./apps/open-bugzilla.run>$titleqa <br/></a></span>
 						$descqa</p>
 					</li>
 					<li>
-						<a href=./apps/open-konversation.run><img src="images/konversation.png" /></a>
-						<p><span><a class="title" href=./apps/open-konversation.run>$titleirc </a></span>
+						<a href=./apps/open-konversation.run><img src="images/konversation.png" class="alignleft"/></a>
+						<span><a class="title" href=./apps/open-konversation.run>$titleirc <br/></a></span>
 						$descirc</p>
 					</li>
 					<li>
-						<a href=./apps/open-donation.run><img src="images/Chwido200.png" /></a>
-						<p><span><a class="title" href=./apps/open-donation.run>$titledonation </a></span>
+						<a href=./apps/open-donation.run><img src="images/Chwido200.png" class="alignleft"/></a>
+						<span><a class="title" href=./apps/open-donation.run>$titledonation <br/></a></span>
 						$descdonation</p>
 					</li>
 					
