--- a/usr/share/oma-welcome/news.sh.htm
+++ b/usr/share/oma-welcome/news.sh.htm
@@ -58,7 +58,7 @@ cat << EOF
 	
 	
 	<div id="rodape">
-	<a href="apps-office.sh.htm" class="button">$next</a>
+	<a href="conf.sh.htm" class="button">$next</a>
 	</div>
 </body>
 	
