--- a/usr/share/oma-welcome/apps-office.sh.htm
+++ b/usr/share/oma-welcome/apps-office.sh.htm
@@ -54,34 +54,34 @@ cat << EOF
 		</div>
 		<ul id="item-list">
 			<li>
-				<a href=./apps/install-calibre.run><img src="images/calibre.png" /></a>
-				<p><span><a class="title" href=./apps/install-calibre.run>$titlecalibre </a></span><br/>
+				<a href=./apps/install-calibre.run><img src="images/calibre.png" class="alignleft"/>
+				<span><a class="title" href=./apps/install-calibre.run>$titlecalibre </a></span><br/>
 				$desccalibre</p>
 			</li>
 			<li>
-				<a href=./apps/install-dia.run><img src="images/dia.png" /></a>
-				<p><span><a class="title" href=./apps/install-dia.run>Dia </a></span><br/>
-				Easy to create Diagram documents with Dia.</br></br></p>
+				<a href=./apps/install-dia.run><img src="images/dia.png" class="alignleft"/>
+				<span><a class="title" href=./apps/install-dia.run>$titledia </a></span><br/>
+				$descdia.</p>
 			</li>
 			<li>
-				<a href=./apps/install-gnucash.run><img src="images/gnucash.png" /></a>
-				<p><span><a class="title" href=./apps/install-gnucash.run>GNUCash </a></span><br/>
-				Manage and tracks your finances with GNUCash.</p>
+				<a href=./apps/install-gnucash.run><img src="images/gnucash.png" class="alignleft"/>
+				<span><a class="title" href=./apps/install-gnucash.run>$titlegnucash </a></span><br/>
+				$descgnucash</p>
+			</li>
+			
+			<li>
+				<a class="title" href="./apps/install-unrar.run"><img src="images/unrar.png" class="alignleft"/>
+				<span><a class="title" href="./apps/install-unrar.run">$titleunrar </a></span><br/>$descunrar</p>
 			</li>
 			<li>
-				<a href=./apps/install-monosim-qt.run><img src="images/monosim-qt.png" /></a>
-				<p><span><a class="title" href=./apps/install-monosim-qt.run>MonoSIM-Qt </a></span><br/>
-				Manage your SIM Card Contacts with MonoSIM Qt.</p>
+				<a href=./apps/install-semantik.run><img src="images/semantik.png" class="alignleft"/>
+				<span><a class="title" href=./apps/install-semantik.run>$titlesemantik </a></span><br/>
+				$descsemantik.</p>
 			</li>
 			<li>
-				<a href=./apps/install-semantik.run><img src="images/semantik.png" /></a>
-				<p><span><a class="title" href=./apps/install-semantik.run>Semantik </a></span><br/>
-				Mindmapping and brainstorming tools.</br></br></p>
-			</li>
-			<li>
-				<a href=./apps/install-kraft.run><img src="images/kraft.png" /></a>
-				<p><span><a class="title" href=./apps/install-kraft.run>Kraft </a></span><br/>
-				Manages your Office Documents with Kraft.</br></br></p>
+				<a href=./apps/install-kraft.run><img src="images/kraft.png" class="alignleft"/>
+				<span><a class="title" href=./apps/install-kraft.run>$titlekraft </a></span><br/>
+				$desckraft</p>
 			</li>
 		</ul>
 	</div> 
