--- a/usr/share/oma-welcome/apps-utility.sh.htm
+++ b/usr/share/oma-welcome/apps-utility.sh.htm
@@ -54,29 +54,28 @@ cat << EOF
 		</div>
 		<ul id="item-list">
 			<li>
-				<a class="title" href=./apps/install-java.run><img src="images/java.png" />
-				<p><span><a class="title" href=./apps/install-java.run>$titleopenjdk</a></span><br/>$descopenjdk</br></br></p>
+				<a class="title" href=./apps/install-java.run><img src="images/java.png" class="alignleft"/>
+				<span><a class="title" href=./apps/install-java.run>$titleopenjdk</a></span><br/>$descopenjdk</p>
 			</li>
 			<li>
-				<a class="title" href=./apps/install-adobe-flash.run><img src="images/flash.png" />
-				<p><span><a class="title" href=./apps/install-adobe-flash.run>$titleflash</br></a></span>$descflash</br></br></p>
-			</li>
-			
-			<li>
-				<a class="title" href="./apps/install-unrar.run"><img src="images/unrar.png" />
-				<p><span><a class="title" href="./apps/install-unrar.run">$titleunrar </a></span><br/>$descunrar</p>
+				<a class="title" href=./apps/install-adobe-flash.run><img src="images/flash.png" class="alignleft"/>
+				<span><a class="title" href=./apps/install-adobe-flash.run>$titleflash</br></a></span>$descflash</p>
 			</li>
 			<li>
-				<a class="title" href=./apps/install-wine.run><img src="/usr/share/icons/oxygen/128x128/apps/wine.png" />
-				<p><span><a class="title" href=./apps/install-wine.run>$titlewine</a></span><br/>$descwine</br></br></br></br></br></br></br></p>
+				<p><a class="title" href=./apps/install-kvpnc.run><img src="images/kvpnc.png" class="alignleft"/></a>
+				<span><a class="title" href=./apps/install-steam.run>$titlekvpnc</a></span><br/></span></br>$descskvpnc</p>
 			</li>
 			<li>
-				<a class="title" href=./apps/install-skype.run><img src="images/skype.png" />
-				<p><span><a class="title" href=./apps/install-skype.run>$titleskype</a></span><br/>$descskype</br></br></p>
+				<a class="title" href=./apps/install-wine.run><img src="/usr/share/icons/oxygen/128x128/apps/wine.png" class="alignleft"/>
+				<span><a class="title" href=./apps/install-wine.run>$titlewine</a></span><br/>$descwine</br></p>
+			</li>
+			<li>
+				<a class="title" href=./apps/install-skype.run><img src="images/skype.png" class="alignleft"/>
+				<span><a class="title" href=./apps/install-skype.run>$titleskype</a></span><br/>$descskype</p>
 			</li>	
 			<li>
-				<a class="title" href="./apps/abrir-rpmdrake.run"><img src="images/rpmdrake.png" />
-				<p><span><a class="title" href="./apps/abrir-rpmdrake.run">$titlerpmdrake</a></span><br/><br/>$descrpmdrake<br/><br/></p>
+				<a class="title" href="./apps/abrir-rpmdrake.run"><img src="images/rpmdrake.png" class="alignleft"/>
+				<span><a class="title" href="./apps/abrir-rpmdrake.run">$titlerpmdrake</a></span>$descrpmdrake</p>
 			</li>
 		</ul>
 	</div> 
