--- a/usr/share/oma-welcome/conf.sh.htm
+++ b/usr/share/oma-welcome/conf.sh.htm
@@ -51,17 +51,17 @@ cat << EOF
 			<li>
 				<a href=./apps/abrir-drakrpm-edit-media.run><img src="/usr/share/icons/packaging_section.png" /></a>
 				<p><span><a class="title" href=./apps/abrir-drakrpm-edit-media.run>$titleeditmedia </a></span><br/>
-				$descaddmedia <br/>.</p>
+				$descaddmedia. <br/><br/><br/></p>
 			</li>
 			<li>
 				<a href=./apps/abrir-drakrpm-update.run><img src="/usr/share/icons/mandrivaupdate.png" /></a>
 				<p><span><a class="title" href=./apps/abrir-drakrpm-update.run>$titleupdate $(lsb_release -d | cut -d":" -f2)</a></span><br/>
-				$descupdate</p>
+				$descupdate.<br/><br/></p>
 			</li>
 			<li>
 				<a class="title" href=./apps/abrir-xfdrake.run><img src="/usr/share/icons/hardware_configuration_section.png" /></a>
 				<p><span><a class="title" href=./apps/abrir-xfdrake.run>$titlexfdrake</a></span><br/>
-				$descxfdrake<br/> <br/><br/></span></p>
+				$descxfdrake. <br/><br/></span></p>
 			</li>
 			<li>
 				<a class="title" href=./apps/abrir-drakprint.run><img src="/usr/share/icons/large/printing_section.png" /></a>
@@ -75,7 +75,7 @@ cat << EOF
 		</ul>
 	</div> 
 	<div id="rodape">
-	<a href="apps.sh.htm" class="button">$next</a>
+	<a href="apps-office.sh.htm" class="button">$next</a>
 	</div>
 </body>
 EOF
